manifests/mc-server-poteto/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mc-server-poteto
  name: mc-server-poteto
  # We wish this deployment to be reloaded
  # when "velocity-config" ConfigMap are updated
  annotations:
    configmap.reloader.stakater.com/reload: "mc-server-poteto-config"
spec:
  # レプリカ数の制御を ScaledObject に任せるため、 replicas は指定しない
  # 参考: https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/#replicas
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: mc-server-poteto
  template:
    metadata:
      labels:
        app: mc-server-poteto
    spec:
      # initContainers:
      #   - name: velocity-config-downloader
      #     image: busybox:1.36.1
      #     env:
      #       - name: URL
      #         value: https://raw.githubusercontent.com/topi-banana/k8s_infra/main/manifests/mc-gateway-velocity/config/velocity.toml
      #     volumeMounts:
      #       - name: velocity-config
      #         mountPath: /root/download/velocity.toml
      #         subPath: velocity.toml
      #     command:
      #       - "sh"
      #       - "-c"
      #       - 'wget -O /root/download/config.yml "${URL}"'
      containers:
        - resources:
            requests:
              memory: 768Mi
          image: itzg/minecraft-server:java17
          name: mc-server-poteto
          ports:
            - containerPort: 25565
              name: mc-poteto
          startupProbe:
            tcpSocket:
              port: 25565
            # 最大120秒待つ
            failureThreshold: 6
            periodSeconds: 20
          volumeMounts:
            - name: mc-server-poteto-config
              mountPath: /config/server.properties
              subPath: server.properties
      volumes:
        - name: mc-server-poteto-config
          configMap:
            name: mc-server-poteto-config
